Improved nginx security by default

--- a/data/nginx/app.conf
+++ b/data/nginx/app.conf
@@ -1,6 +1,7 @@
 server {
     listen 80;
     server_name example.org;
+    server_tokens off;
 
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
@@ -14,6 +15,7 @@ server {
 server {
     listen 443 ssl;
     server_name example.org;
+    server_tokens off;
 
     ssl_certificate /etc/letsencrypt/live/example.org/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/example.org/privkey.pem;
