--- a/data/nginx/app.conf
+++ b/data/nginx/app.conf
@@ -1,6 +1,5 @@
 server {
     listen 80;
-    server_name example.org;
     server_tokens off;
 
     location /.well-known/acme-challenge/ {
@@ -14,11 +13,10 @@ server {
 
 server {
     listen 443 ssl;
-    server_name example.org;
     server_tokens off;
 
-    ssl_certificate /etc/letsencrypt/live/example.org/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/example.org/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/all/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/all/privkey.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
