--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,26 @@
-version: '3'
-
+version: '3.6'
 services:
   nginx:
     image: nginx:1.15-alpine
     restart: unless-stopped
+    ports:
+      - "80:80"
+      - "443:443"
     volumes:
       - ./data/nginx:/etc/nginx/conf.d
       - ./data/certbot/conf:/etc/letsencrypt
       - ./data/certbot/www:/var/www/certbot
-    ports:
-      - "80:80"
-      - "443:443"
+      - ./data/nginx/log:/var/log/nginx
+    # We need to make sure that nginx reloads the newly obtained certificates
+    # This makes nginx reload its configuration (and certificates) every six hours 
+    # in the background and launches nginx in the foreground.
     command: "/bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"
   certbot:
-    image: certbot/certbot
+    image: certbot/certbot:v0.36.0
     restart: unless-stopped
     volumes:
       - ./data/certbot/conf:/etc/letsencrypt
       - ./data/certbot/www:/var/www/certbot
+    # Automatic Certificate Renewal
+    # This will check if your certificate is up for renewal every 12 hours as recommended by Let’s Encrypt.
     entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
