Finished migrating bootstrap logic from the `init-letsencrypt.sh`
- certbot container waiting for healthy nginx container;
- during startup of the nginx container:
    - an initial certificate get created;
    - it starts nginx daemon and await for the certbot container, then
      removing temporally certificate;
    - it does start a "API" that allow certbot to reload nginx daemon;
-

--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,8 +1,11 @@
-FROM nginx:1.15-alpine
+FROM nginx:1.19-alpine
 
-RUN apk add --no-cache \
+RUN set -x \
+&&  apk add --no-cache \
+      apache2-utils \
       curl \
       bash \
+      netcat-openbsd \
       openssl \
 &&  mkdir -p /etc/nginx/letsencrypt \
 &&  curl -s https://raw.githubusercontent.com/certbot/certbot/master/certbot-nginx/certbot_nginx/_internal/tls_configs/options-ssl-nginx.conf > "/etc/nginx/letsencrypt/options-ssl-nginx.conf" \
@@ -12,5 +15,9 @@ RUN apk add --no-cache \
            /tmp/* \
            /var/tmp/*
 
-COPY ./scripts/docker-entrypoint.sh /
+RUN curl -s https://raw.githubusercontent.com/nginxinc/docker-nginx/master/mainline/alpine/docker-entrypoint.sh > "/nginx-entrypoint.sh" \
+&&  chmod +x /nginx-entrypoint.sh
+COPY docker-entrypoint.sh /
 ENTRYPOINT ["/docker-entrypoint.sh"]
+
+CMD ["nginx", "-g", "daemon off;"]
