--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,32 +1,36 @@
 version: '3'
+volumes:
+  ssl: {}
 
 services:
   nginx:
     build:
-      context: ./data/nginx
+      context: nginx
       dockerfile: Dockerfile
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "curl", "--fail", "http://localhost"]
+      test: ["CMD", "curl", "--silent", "--fail", "http://localhost"]
       interval: 45s
       timeout: 5s
       retries: 3
-    volumes:
-      - ./data/nginx/conf.d:/etc/nginx/conf.d
-      - ./data/certbot/conf:/etc/letsencrypt
-      - ./data/certbot/www:/var/www/certbot
     ports:
       - "80:80"
       - "443:443"
-    command: "/bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"
+    env_file: .env
+    volumes:
+      - ./nginx/conf-templates:/etc/nginx/templates
+      - ssl:/etc/letsencrypt
+      - ssl:/var/www/certbot
 
   certbot:
-    image: certbot/certbot
+    build:
+      context: certbot
+      dockerfile: Dockerfile
     restart: unless-stopped
     depends_on:
       nginx:
         condition: service_healthy
+    env_file: .env
     volumes:
-      - ./data/certbot/conf:/etc/letsencrypt
-      - ./data/certbot/www:/var/www/certbot
-    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
+      - ssl:/etc/letsencrypt
+      - ssl:/var/www/certbot
