--- a/data/nginx/app.conf
+++ b/data/nginx/app.conf
@@ -21,11 +21,25 @@ server {
     ssl_certificate_key /etc/letsencrypt/live/parkingmoinscon.com/privkey.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+    
+    root /var/www/parkingmoinscon-app;
 
     location / {
-        proxy_pass  http://example.org;
+        try_files $uri $uri/ /index.html;
+        proxy_pass  http://parkingmoinscon.com;
         proxy_set_header    Host                $http_host;
         proxy_set_header    X-Real-IP           $remote_addr;
         proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
     }
+    
+    location /rest/ {
+        proxy_pass http://localhost:8080/;
+        proxy_set_header    Host               $host;
+        proxy_set_header    X-Real-IP          $remote_addr;
+        proxy_set_header    X-Forwarded-For    $proxy_add_x_forwarded_for;
+        proxy_set_header    X-Forwarded-Host   $host;
+        proxy_set_header    X-Forwarded-Server $host;
+        proxy_set_header    X-Forwarded-Port   $server_port;
+        proxy_set_header    X-Forwarded-Proto  $scheme; 
+	}
 }
