--- a/data/nginx/app.conf
+++ b/data/nginx/app.conf
@@ -26,10 +26,10 @@ server {
 
     location / {
         try_files $uri $uri/ /index.html;
-        proxy_pass  http://parkingmoinscon.com;
-        proxy_set_header    Host                $http_host;
-        proxy_set_header    X-Real-IP           $remote_addr;
-        proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
+        #proxy_pass  http://parkingmoinscon.com;
+        #proxy_set_header    Host                $http_host;
+        #proxy_set_header    X-Real-IP           $remote_addr;
+        #proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
     }
     
     location /rest/ {
@@ -41,5 +41,5 @@ server {
         proxy_set_header    X-Forwarded-Server $host;
         proxy_set_header    X-Forwarded-Port   $server_port;
         proxy_set_header    X-Forwarded-Proto  $scheme; 
-	}
+    }
 }
