--- a/data/nginx/app.conf
+++ b/data/nginx/app.conf
@@ -23,17 +23,9 @@ server {
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
     
     root /var/www/parkingmoinscon-app;
-
-    location / {
-        try_files $uri $uri/ /index.html;
-        #proxy_pass  http://parkingmoinscon.com;
-        #proxy_set_header    Host                $http_host;
-        #proxy_set_header    X-Real-IP           $remote_addr;
-        #proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
-    }
     
     location /rest/ {
-        proxy_pass http://localhost:8080/;
+        proxy_pass http://app:8080;
         proxy_set_header    Host               $host;
         proxy_set_header    X-Real-IP          $remote_addr;
         proxy_set_header    X-Forwarded-For    $proxy_add_x_forwarded_for;
@@ -42,4 +34,13 @@ server {
         proxy_set_header    X-Forwarded-Port   $server_port;
         proxy_set_header    X-Forwarded-Proto  $scheme; 
     }
+    
+    location / {
+        try_files $uri $uri/ /index.html;
+        #proxy_pass  http://parkingmoinscon.com;
+        #proxy_set_header    Host                $http_host;
+        #proxy_set_header    X-Real-IP           $remote_addr;
+        #proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
+    }
+
 }
