--- a/data/nginx/app.conf
+++ b/data/nginx/app.conf
@@ -1,3 +1,7 @@
+upstream host_service {
+    server 172.18.0.1:8080; 
+}
+
 server {
     listen 80;
     server_name parkingmoinscon.com;
@@ -22,25 +26,24 @@ server {
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
     
-    root /var/www/parkingmoinscon-app;
-    
+
     location /rest/ {
-        proxy_pass http://app:8080;
+        proxy_pass http://host_service/;
         proxy_set_header    Host               $host;
         proxy_set_header    X-Real-IP          $remote_addr;
         proxy_set_header    X-Forwarded-For    $proxy_add_x_forwarded_for;
         proxy_set_header    X-Forwarded-Host   $host;
         proxy_set_header    X-Forwarded-Server $host;
         proxy_set_header    X-Forwarded-Port   $server_port;
-        proxy_set_header    X-Forwarded-Proto  $scheme; 
-    }
-    
-    location / {
-        try_files $uri $uri/ /index.html;
-        #proxy_pass  http://parkingmoinscon.com;
-        #proxy_set_header    Host                $http_host;
-        #proxy_set_header    X-Real-IP           $remote_addr;
-        #proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
+        proxy_set_header    X-Forwarded-Proto  $scheme;
     }
 
+    location / {
+    	root /var/www/parkingmoinscon-app;
+        try_files $uri $uri/ /index.html;
+        proxy_set_header    Host                $http_host;
+        proxy_set_header    X-Real-IP           $remote_addr;
+        proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
+    }
+    
 }
