--- a/data/nginx/app.conf
+++ b/data/nginx/app.conf
@@ -2,6 +2,11 @@ upstream host_service {
     server 172.18.0.1:8080; 
 }
 
+map $http_accept $webp_suffix {
+    default "";
+    "~*webp" ".webp";
+}
+
 server {
     listen 80;
     server_name parkingmoinscon.com;
@@ -11,6 +16,16 @@ server {
         root /var/www/certbot;
     }
 
+    location / {
+        return 301 https://www.$host$request_uri;
+    }
+}
+
+
+server {
+    listen 80;
+    server_name www.parkingmoinscon.com;
+    server_tokens off;
     location / {
         return 301 https://$host$request_uri;
     }
@@ -25,7 +40,40 @@ server {
     ssl_certificate_key /etc/letsencrypt/live/parkingmoinscon.com/privkey.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+
+    location / {
+        return 301 https://www.$host$request_uri;
+    }
+}
+
+server {
+    listen 443 ssl;
+    server_name www.parkingmoinscon.com;
+    server_tokens off;
+
+    ssl_certificate /etc/letsencrypt/live/parkingmoinscon.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/parkingmoinscon.com/privkey.pem;
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
     
+    gzip on;
+    gzip_comp_level 6;
+    gzip_vary on;
+    gzip_min_length 256;
+    gzip_proxied expired no-cache no-store private auth;
+    gzip_types application/atom+xml application/geo+json application/javascript application/x-javascript application/json application/ld+json application/manifest+json application/rdf+xml application/rss+xml application/vnd.ms-fontobject application/wasm application/x-web-app-manifest+json application/xhtml+xml application/xml font/eot font/otf font/ttf image/bmp image/svg+xml text/cache-manifest text/calendar text/css text/javascript text/markdown text/plain text/xml text/vcard text/vnd.rim.location.xloc text/vtt text/x-component text/x-cross-domain-policy;    
+    gzip_disable "MSIE [1-6]\.";
+    gzip_buffers 16 8k;
+
+   location ~ \.(png|jpe?g)XXXXXXXXXX$ {
+       add_header Vary "Accept-Encoding";
+       add_header "Access-Control-Allow-Origin" "*";
+       add_header Cache-Control "public, no-transform";
+       access_log off;
+       log_not_found off;
+       expires max;
+       try_files $uri$webp_suffix $uri =404;
+    }
 
     location /rest/ {
         proxy_pass http://host_service/;
@@ -40,7 +88,7 @@ server {
 
     location / {
     	root /var/www/parkingmoinscon-app;
-        try_files $uri $uri/ /index.html;
+        try_files $uri $uri/ /index.original.html /index.html;
         proxy_set_header    Host                $http_host;
         proxy_set_header    X-Real-IP           $remote_addr;
         proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
