conf actuelle prod

--- a/data/nginx/app.conf
+++ b/data/nginx/app.conf
@@ -12,6 +12,12 @@ server {
     server_name parkingmoinscon.com;
     server_tokens off;
 
+    # Ajouter les headers de contrôle d'accès CORS
+    add_header    'Access-Control-Allow-Origin' 'http://parkingmoinscon.com,https://parkingmoinscon.com,http://www.parkingmoinscon.com,https://www.parkingmoinscon.com' always;
+    add_header    'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
+    add_header    'Access-Control-Allow-Headers' 'Origin, X-Requested-With, Content-Type, Accept' always;
+    add_header    'Access-Control-Allow-Credentials' 'true' always;
+
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
     }
@@ -19,6 +25,7 @@ server {
     location / {
         return 301 https://www.$host$request_uri;
     }
+    
 }
 
 
@@ -26,6 +33,13 @@ server {
     listen 80;
     server_name www.parkingmoinscon.com;
     server_tokens off;
+
+    # Ajouter les headers de contrôle d'accès CORS
+    add_header    'Access-Control-Allow-Origin' 'http://parkingmoinscon.com,https://parkingmoinscon.com,http://www.parkingmoinscon.com,https://www.parkingmoinscon.com' always;
+    add_header    'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
+    add_header    'Access-Control-Allow-Headers' 'Origin, X-Requested-With, Content-Type, Accept' always;
+    add_header    'Access-Control-Allow-Credentials' 'true' always;
+
     location / {
         return 301 https://$host$request_uri;
     }
@@ -40,6 +54,12 @@ server {
     ssl_certificate_key /etc/letsencrypt/live/parkingmoinscon.com/privkey.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+
+    # Ajouter les headers de contrôle d'accès CORS
+    add_header    'Access-Control-Allow-Origin' 'http://parkingmoinscon.com,https://parkingmoinscon.com,http://www.parkingmoinscon.com,https://www.parkingmoinscon.com' always;
+    add_header    'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
+    add_header    'Access-Control-Allow-Headers' 'Origin, X-Requested-With, Content-Type, Accept' always;
+    add_header    'Access-Control-Allow-Credentials' 'true' always;
 
     location / {
         return 301 https://www.$host$request_uri;
@@ -64,6 +84,12 @@ server {
     gzip_types application/atom+xml application/geo+json application/javascript application/x-javascript application/json application/ld+json application/manifest+json application/rdf+xml application/rss+xml application/vnd.ms-fontobject application/wasm application/x-web-app-manifest+json application/xhtml+xml application/xml font/eot font/otf font/ttf image/bmp image/svg+xml text/cache-manifest text/calendar text/css text/javascript text/markdown text/plain text/xml text/vcard text/vnd.rim.location.xloc text/vtt text/x-component text/x-cross-domain-policy;    
     gzip_disable "MSIE [1-6]\.";
     gzip_buffers 16 8k;
+
+    # Ajouter les headers de contrôle d'accès CORS
+    add_header    'Access-Control-Allow-Origin' 'http://parkingmoinscon.com,https://parkingmoinscon.com,http://www.parkingmoinscon.com,https://www.parkingmoinscon.com' always;
+    add_header    'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
+    add_header    'Access-Control-Allow-Headers' 'Origin, X-Requested-With, Content-Type, Accept' always;
+    add_header    'Access-Control-Allow-Credentials' 'true' always;
 
    location ~ \.(png|jpe?g)XXXXXXXXXX$ {
        add_header Vary "Accept-Encoding";
