--- a/data/nginx/app.conf
+++ b/data/nginx/app.conf
@@ -9,11 +9,11 @@ map $http_accept $webp_suffix {
 
 server {
     listen 80;
-    server_name parkingmoinscon.com;
+    server_name horodateur.me;
     server_tokens off;
 
     # Ajouter les headers de contrôle d'accès CORS
-    add_header    'Access-Control-Allow-Origin' 'http://parkingmoinscon.com,https://parkingmoinscon.com,http://www.parkingmoinscon.com,https://www.parkingmoinscon.com' always;
+    add_header    'Access-Control-Allow-Origin' 'http://horodateur.me,https://horodateur.me,http://www.horodateur.me,https://www.horodateur.me' always;
     add_header    'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
     add_header    'Access-Control-Allow-Headers' 'Origin, X-Requested-With, Content-Type, Accept' always;
     add_header    'Access-Control-Allow-Credentials' 'true' always;
@@ -31,11 +31,11 @@ server {
 
 server {
     listen 80;
-    server_name www.parkingmoinscon.com;
+    server_name www.horodateur.me;
     server_tokens off;
 
     # Ajouter les headers de contrôle d'accès CORS
-    add_header    'Access-Control-Allow-Origin' 'http://parkingmoinscon.com,https://parkingmoinscon.com,http://www.parkingmoinscon.com,https://www.parkingmoinscon.com' always;
+    add_header    'Access-Control-Allow-Origin' 'http://horodateur.me,https://horodateur.me,http://www.horodateur.me,https://www.horodateur.me' always;
     add_header    'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
     add_header    'Access-Control-Allow-Headers' 'Origin, X-Requested-With, Content-Type, Accept' always;
     add_header    'Access-Control-Allow-Credentials' 'true' always;
@@ -47,16 +47,16 @@ server {
 
 server {
     listen 443 ssl;
-    server_name parkingmoinscon.com;
+    server_name horodateur.me;
     server_tokens off;
 
-    ssl_certificate /etc/letsencrypt/live/parkingmoinscon.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/parkingmoinscon.com/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/horodateur.me/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/horodateur.me/privkey.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
     # Ajouter les headers de contrôle d'accès CORS
-    add_header    'Access-Control-Allow-Origin' 'http://parkingmoinscon.com,https://parkingmoinscon.com,http://www.parkingmoinscon.com,https://www.parkingmoinscon.com' always;
+    add_header    'Access-Control-Allow-Origin' 'http://horodateur.me,https://horodateur.me,http://www.horodateur.me,https://www.horodateur.me' always;
     add_header    'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
     add_header    'Access-Control-Allow-Headers' 'Origin, X-Requested-With, Content-Type, Accept' always;
     add_header    'Access-Control-Allow-Credentials' 'true' always;
@@ -68,11 +68,11 @@ server {
 
 server {
     listen 443 ssl;
-    server_name www.parkingmoinscon.com;
+    server_name www.horodateur.me;
     server_tokens off;
 
-    ssl_certificate /etc/letsencrypt/live/parkingmoinscon.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/parkingmoinscon.com/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/horodateur.me/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/horodateur.me/privkey.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
     
@@ -86,7 +86,7 @@ server {
     gzip_buffers 16 8k;
 
     # Ajouter les headers de contrôle d'accès CORS
-    add_header    'Access-Control-Allow-Origin' 'http://parkingmoinscon.com,https://parkingmoinscon.com,http://www.parkingmoinscon.com,https://www.parkingmoinscon.com' always;
+    add_header    'Access-Control-Allow-Origin' 'http://horodateur.me,https://horodateur.me,http://www.horodateur.me,https://www.horodateur.me' always;
     add_header    'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
     add_header    'Access-Control-Allow-Headers' 'Origin, X-Requested-With, Content-Type, Accept' always;
     add_header    'Access-Control-Allow-Credentials' 'true' always;
@@ -113,7 +113,7 @@ server {
     }
 
     location / {
-    	root /var/www/parkingmoinscon-app;
+    	root /var/www/horodateur-app;
         try_files $uri $uri/ /index.original.html /index.html;
         proxy_set_header    Host                $http_host;
         proxy_set_header    X-Real-IP           $remote_addr;
