fix challenger ssl www

--- a/data/nginx/app.conf
+++ b/data/nginx/app.conf
@@ -40,6 +40,10 @@ server {
     add_header    'Access-Control-Allow-Headers' 'Origin, X-Requested-With, Content-Type, Accept' always;
     add_header    'Access-Control-Allow-Credentials' 'true' always;
 
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+
     location / {
         return 301 https://$host$request_uri;
     }
