--- a/data/nginx/app.conf
+++ b/data/nginx/app.conf
@@ -9,14 +9,8 @@ map $http_accept $webp_suffix {
 
 server {
     listen 80;
-    server_name horodateur.me;
+    server_name horodateur.me www.horodateur.me;
     server_tokens off;
-
-    # Ajouter les headers de contrôle d'accès CORS
-    add_header    'Access-Control-Allow-Origin' 'http://horodateur.me,https://horodateur.me,http://www.horodateur.me,https://www.horodateur.me' always;
-    add_header    'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
-    add_header    'Access-Control-Allow-Headers' 'Origin, X-Requested-With, Content-Type, Accept' always;
-    add_header    'Access-Control-Allow-Credentials' 'true' always;
 
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
@@ -28,51 +22,9 @@ server {
     
 }
 
-
-server {
-    listen 80;
-    server_name www.horodateur.me;
-    server_tokens off;
-
-    # Ajouter les headers de contrôle d'accès CORS
-    add_header    'Access-Control-Allow-Origin' 'http://horodateur.me,https://horodateur.me,http://www.horodateur.me,https://www.horodateur.me' always;
-    add_header    'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
-    add_header    'Access-Control-Allow-Headers' 'Origin, X-Requested-With, Content-Type, Accept' always;
-    add_header    'Access-Control-Allow-Credentials' 'true' always;
-
-    location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
-    }
-
-    location / {
-        return 301 https://$host$request_uri;
-    }
-}
-
 server {
     listen 443 ssl;
-    server_name horodateur.me;
-    server_tokens off;
-
-    ssl_certificate /etc/letsencrypt/live/horodateur.me/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/horodateur.me/privkey.pem;
-    include /etc/letsencrypt/options-ssl-nginx.conf;
-    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
-
-    # Ajouter les headers de contrôle d'accès CORS
-    add_header    'Access-Control-Allow-Origin' 'http://horodateur.me,https://horodateur.me,http://www.horodateur.me,https://www.horodateur.me' always;
-    add_header    'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
-    add_header    'Access-Control-Allow-Headers' 'Origin, X-Requested-With, Content-Type, Accept' always;
-    add_header    'Access-Control-Allow-Credentials' 'true' always;
-
-    location / {
-        return 301 https://www.$host$request_uri;
-    }
-}
-
-server {
-    listen 443 ssl;
-    server_name www.horodateur.me;
+    server_name horodateur.me www.horodateur.me;
     server_tokens off;
 
     ssl_certificate /etc/letsencrypt/live/horodateur.me/fullchain.pem;
