fix redirect www.www

--- a/data/nginx/app.conf
+++ b/data/nginx/app.conf
@@ -9,7 +9,7 @@ map $http_accept $webp_suffix {
 
 server {
     listen 80;
-    server_name horodateur.me www.horodateur.me;
+    server_name horodateur.me;
     server_tokens off;
 
     location /.well-known/acme-challenge/ {
@@ -21,10 +21,39 @@ server {
     }
     
 }
+server {
+    listen 80;
+    server_name www.horodateur.me;
+    server_tokens off;
+
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+
+    location / {
+        return 301 https://$host$request_uri;
+    }
+
+}
 
 server {
     listen 443 ssl;
-    server_name horodateur.me www.horodateur.me;
+    server_name horodateur.me;
+    server_tokens off;
+
+    ssl_certificate /etc/letsencrypt/live/horodateur.me/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/horodateur.me/privkey.pem;
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+
+    location / {
+        return 301 https://www.$host$request_uri;
+    }
+}
+
+server {
+    listen 443 ssl;
+    server_name www.horodateur.me;
     server_tokens off;
 
     ssl_certificate /etc/letsencrypt/live/horodateur.me/fullchain.pem;
