conf actual prod

--- a/data/nginx/app.conf
+++ b/data/nginx/app.conf
@@ -12,6 +12,11 @@ server {
     server_name horodateur.me;
     server_tokens off;
 
+
+    location /7ecdc3a7f05083727becb128aea76dc1.txt {
+        root /var/www/horodateur-app;
+    }
+
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
     }
