--- a/data/nginx/app.conf
+++ b/data/nginx/app.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name example.org;
+    server_name data-scrapper.efficient.guru;
     server_tokens off;
 
     location /.well-known/acme-challenge/ {
@@ -12,20 +12,61 @@ server {
     }
 }
 
+# Client
 server {
     listen 443 ssl;
-    server_name example.org;
+    server_name data-scrapper.efficient.guru;
     server_tokens off;
 
-    ssl_certificate /etc/letsencrypt/live/example.org/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/example.org/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/data-scrapper.efficient.guru/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/data-scrapper.efficient.guru/privkey.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
     location / {
-        proxy_pass  http://example.org;
+        proxy_pass  http://localhost:8080;
         proxy_set_header    Host                $http_host;
         proxy_set_header    X-Real-IP           $remote_addr;
         proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
+    }
+}
+
+# Server
+server {
+    listen 8443 ssl;
+    server_name data-scrapper.efficient.guru;
+    server_tokens off;
+
+    ssl_certificate /etc/letsencrypt/live/data-scrapper.efficient.guru/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/data-scrapper.efficient.guru/privkey.pem;
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+
+    location / {
+        proxy_pass  http://localhost.8081;
+        proxy_set_header    Host                $http_host;
+        proxy_set_header    X-Real-IP           $remote_addr;
+        proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
+    }
+}
+
+
+# WebSocket Server
+server {
+    listen 58443 ssl;
+    server_name data-scrapper.efficient.guru;
+    server_tokens off;
+
+    ssl_certificate /etc/letsencrypt/live/data-scrapper.efficient.guru/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/data-scrapper.efficient.guru/privkey.pem;
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+
+    location / {
+        proxy_pass  http://localhost:55555;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $connection_upgrade;
+        proxy_set_header Host $host;
     }
 }
