--- a/data/nginx/app.conf
+++ b/data/nginx/app.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name data-scrapper.efficient.guru;
+    server_name data-scraper.efficient.guru;
     server_tokens off;
 
     location /.well-known/acme-challenge/ {
@@ -15,11 +15,11 @@ server {
 # Client
 server {
     listen 443 ssl;
-    server_name data-scrapper.efficient.guru;
+    server_name data-scraper.efficient.guru;
     server_tokens off;
 
-    ssl_certificate /etc/letsencrypt/live/data-scrapper.efficient.guru/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/data-scrapper.efficient.guru/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/data-scraper.efficient.guru/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/data-scraper.efficient.guru/privkey.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
@@ -34,11 +34,11 @@ server {
 # Server
 server {
     listen 8443 ssl;
-    server_name data-scrapper.efficient.guru;
+    server_name data-scraper.efficient.guru;
     server_tokens off;
 
-    ssl_certificate /etc/letsencrypt/live/data-scrapper.efficient.guru/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/data-scrapper.efficient.guru/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/data-scraper.efficient.guru/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/data-scraper.efficient.guru/privkey.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
@@ -54,11 +54,11 @@ server {
 # WebSocket Server
 server {
     listen 58443 ssl;
-    server_name data-scrapper.efficient.guru;
+    server_name data-scraper.efficient.guru;
     server_tokens off;
 
-    ssl_certificate /etc/letsencrypt/live/data-scrapper.efficient.guru/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/data-scrapper.efficient.guru/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/data-scraper.efficient.guru/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/data-scraper.efficient.guru/privkey.pem;
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
