--- a/data/nginx/app.conf
+++ b/data/nginx/app.conf
@@ -43,7 +43,7 @@ server {
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
     location / {
-        proxy_pass  http://localhost.8081;
+        proxy_pass  http://localhost:8081;
         proxy_set_header    Host                $http_host;
         proxy_set_header    X-Real-IP           $remote_addr;
         proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
