fix: websocket error

--- a/data/nginx/app.conf
+++ b/data/nginx/app.conf
@@ -50,6 +50,15 @@ server {
     }
 }
 
+map $http_upgrade $connection_upgrade {
+        default upgrade;
+        '' close;
+    }
+
+    upstream websocket {
+        server 127.0.0.1:55555;
+    }
+
 
 # WebSocket Server
 server {
@@ -63,7 +72,7 @@ server {
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
     location / {
-        proxy_pass  http://localhost:55555;
+        proxy_pass  http://websocket;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection $connection_upgrade;
