--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,3 +20,8 @@ services:
       - ./data/certbot/conf:/etc/letsencrypt
       - ./data/certbot/www:/var/www/certbot
     entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
+
+  networks:
+    default:
+      external: true
+      name: efficient-guru-docker-compose-network
