--- a/data/nginx/app.conf
+++ b/data/nginx/app.conf
@@ -24,7 +24,7 @@ server {
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
     location / {
-        proxy_pass  http://172.17.0.1:8080;
+        proxy_pass  http://app-client:8080;
         proxy_set_header    Host                $http_host;
         proxy_set_header    X-Real-IP           $remote_addr;
         proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
@@ -43,7 +43,7 @@ server {
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
     location / {
-        proxy_pass  http://172.17.0.1:8081;
+        proxy_pass  http://app-service:8081;
         proxy_set_header    Host                $http_host;
         proxy_set_header    X-Real-IP           $remote_addr;
         proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
@@ -56,7 +56,7 @@ map $http_upgrade $connection_upgrade {
     }
 
     upstream websocket {
-        server 172.17.0.1:55555;
+        server app-service:55555;
     }
 
 
