Fix could not renew certbot because listen 443 is not apply challenge

--- a/data/nginx/app.conf
+++ b/data/nginx/app.conf
@@ -22,6 +22,10 @@ server {
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+
     location / {
         proxy_pass  http://example.org;
         proxy_set_header    Host                $http_host;
